--- a/style/style.css
+++ b/style/style.css
@@ -27,23 +27,32 @@
 }
 
 .contenedor__color{
+    display: flex;
+    flex-wrap: wrap;
     background-color: #14213D;
     padding: 25px 75px;
     overflow: hidden;
+    justify-content: center;
+    align-content: center;
+    transition: all 500ms e;
 }
 
 .contenedor__inscripciones{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 1200px;
+    height: 600px;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .contenedor__inscripciones img{
-    height: auto;
-    width: auto;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    transition: all 50ms ease;
+}
+
+.contenedor__inscripciones img:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
 
 .contenedor__texto{
@@ -85,7 +94,7 @@
 /* PREMIOS */ 
 
 .premio__imagen{
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
