--- a/style/sass/style.css
+++ b/style/sass/style.css
@@ -3,3 +3,103 @@
   margin: 0;
   padding: 0;
 }
+
+.body__pubg {
+  background: #181818;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  padding: 0 1.5em;
+}
+.body__pubg .contenedor__pubg {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5em;
+}
+.body__pubg .contenedor__pubg .logo__pubg {
+  text-align: center;
+  font-size: 3em;
+  padding: 0.75em;
+}
+.body__pubg .contenedor__pubg .logo__pubg span {
+  color: #B70E21;
+}
+.body__pubg .contenedor__pubg .formulario__pugb {
+  box-shadow: 0 0 20px 0 #fff;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .forma__pugb {
+  background: #222222;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .forma__pugb form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .forma__pugb form label {
+  display: block;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .forma__pugb form p {
+  margin: 0;
+  padding: 1em;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .forma__pugb form .block {
+  grid-column: 1/3;
+}
+.body__pubg .contenedor__pubg .formulario__pugb .formulario__info {
+  background: #000;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.forma__pugb > * {
+  padding: 1em;
+}
+
+.forma__pugb form button, .forma__pugb form input, .forma__pugb form textarea {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: #fff;
+  border-bottom: 1px solid #d63031;
+}
+
+.forma__pugb form button {
+  background: #B70E21;
+  border: 0;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.forma__pugb form button:hover, .forma__pugb form button:focus {
+  background: #d63031;
+  color: #fff;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+
+.formulario__info h4, .formulario__info ul, .formulario__info p {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+@media screen and (min-width: 700px) {
+  .body__pubg {
+    padding: 0;
+  }
+  .formulario__pugb {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  .formulario__pugb > * {
+    padding: 2em;
+  }
+  .formulario__info h4,
+.formulario__info ul,
+.formulario__info p {
+    text-align: left;
+  }
+}/*# sourceMappingURL=style.css.map */
