--- a/style/sass/partials/_fornulario.scss
+++ b/style/sass/partials/_fornulario.scss
@@ -1,5 +1,5 @@
 .body__pubg {
-    background: #181818;
+    background: $colorFondo;
     color: #fff; 
     font-family: 'Open Sans', sans-serif;
     padding: 0 1.5em;
@@ -26,6 +26,10 @@
             .forma__pugb {
                 background: #222222;
 
+                > *{
+                    padding: 1em
+                }
+
                 form {
                     display: grid;
                     grid-template-columns: 1fr 1fr;
@@ -42,19 +46,43 @@
                     .block {
                         grid-column: 1 / 3;
                     }
+
+                    button, input, textarea {
+                        width: 100%;
+                        padding: .7em;
+                        border: none;
+                        background: none;
+                        outline: 0;
+                        color: #fff;
+                        border-bottom: 1px solid #d63031;
+                    }
+
+                    button {
+                        background: #B70E21;
+                        border: 0;
+                        text-transform: uppercase;
+                        padding: 1em;
+
+                        &:hover, &:focus {
+                            background: #d63031;
+                            color: #fff;
+                            transition: background-color 1s ease-out;
+                            outline: 0;
+                        }
+                    }
                 }
-
-
             }
             
             .formulario__info {
                 background: #000;
+
+                h4, ul, p {
+                    text-align: center;
+                    margin: 0 0 1rem 0;
+                }
             }
         }
-        
-
     }
-
 }
  
  
@@ -63,44 +91,6 @@
      list-style: none;
      padding: 0;
  }
- 
- 
- .forma__pugb > *{
-     padding: 1em
- 
- }
- 
- 
- .forma__pugb form button, .forma__pugb form input, .forma__pugb form textarea {
-     width: 100%;
-     padding: .7em;
-     border: none;
-     background: none;
-     outline: 0;
-     color: #fff;
-     border-bottom: 1px solid #d63031;
- }
- 
- .forma__pugb form button {
-     background: #B70E21;
-     border: 0;
-     text-transform: uppercase;
-     padding: 1em;
- }
- 
- .forma__pugb form button:hover, .forma__pugb form button:focus {
-     background: #d63031;
-     color: #fff;
-     transition: background-color 1s ease-out;
-     outline: 0;
- }
- 
-
- .formulario__info h4, .formulario__info ul, .formulario__info p {
-     text-align: center;
-     margin: 0 0 1rem 0;
- }
- 
  
  @media screen and (min-width: 700px) {
      .body__pubg {
