--- a/style/sass/partials/_variable.scss
+++ b/style/sass/partials/_variable.scss
@@ -1,7 +1,7 @@
 
 
-$colorFondo : #181818;
-$colorSombra : #fff;
+$colorFondoFormulario : #181818;
+$colorSombraFormulario : #fff;
 
 $colorFondo : #181818;
 $colorFondo : #181818;
