--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,7 +1,5 @@
 @import "./partials/variable";
 
 @import "./partials/reinicio";
-
-
-
+@import "./partials/pagina_principal";
 @import "./partials/fornulario";
