--- a/style/sass/style.css
+++ b/style/sass/style.css
@@ -5,13 +5,13 @@
 }
 
 .body__index {
-  background-image: url(../../../imagen/fondo_index.jpg);
+  background-image: url(../../imagen/fondo_index.jpg);
   background-size: 100%;
   padding: 0 125px;
 }
 .body__index .titulo__torneo {
   height: 100vh;
-  background-image: linear-gradient(to top, rgba(251, 194, 235, 0.301) 0%, hsla(218deg, 68%, 79%, 0.301) 100%), url(../../../imagen/torneo_imagen.jpg);
+  background-image: linear-gradient(to top, rgba(251, 194, 235, 0.301) 0%, hsla(218deg, 68%, 79%, 0.301) 100%), url(../../imagen/torneo_imagen.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
